# django-replyify-oauth2-consumer

./: .gitignore  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  requirements.txt  setup.py
replyify_oauth2/: __init__.py  _settings.py  admin.py  apps.py  decorators.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
replyify_oauth2/migrations/: 0001_initial.py
tests/: pyproject.toml
