[project]
name = "replyify_oauth2_replyify"
version = "0.3.0"
authors = [
  { name="Marco DiDomenico", email="marco@replyify.com" },
]
description = "A Django wrapper for Replyify's Python API bindings."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/replyify/django-replyify-oauth2-consumer"
Issues = "https://github.com/replyify/django-replyify-oauth2-consumer/issues"